src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT024.snap
---
source: src/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryAsyncioMarkOnFixture: ~
  location:
    row: 14
    column: 1
  end_location:
    row: 14
    column: 22
  fix:
    content: ""
    location:
      row: 14
      column: 0
    end_location:
      row: 15
      column: 0
  parent: ~
- kind:
    UnnecessaryAsyncioMarkOnFixture: ~
  location:
    row: 20
    column: 1
  end_location:
    row: 20
    column: 20
  fix:
    content: ""
    location:
      row: 20
      column: 0
    end_location:
      row: 21
      column: 0
  parent: ~
- kind:
    UnnecessaryAsyncioMarkOnFixture: ~
  location:
    row: 27
    column: 1
  end_location:
    row: 27
    column: 22
  fix:
    content: ""
    location:
      row: 27
      column: 0
    end_location:
      row: 28
      column: 0
  parent: ~
- kind:
    UnnecessaryAsyncioMarkOnFixture: ~
  location:
    row: 33
    column: 1
  end_location:
    row: 33
    column: 20
  fix:
    content: ""
    location:
      row: 33
      column: 0
    end_location:
      row: 34
      column: 0
  parent: ~

