src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT025.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind:
    ErroneousUseFixturesOnFixture: ~
  location:
    row: 9
    column: 1
  end_location:
    row: 9
    column: 29
  fix: ~
  parent: ~
- kind:
    ErroneousUseFixturesOnFixture: ~
  location:
    row: 16
    column: 1
  end_location:
    row: 16
    column: 29
  fix: ~
  parent: ~

