src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT026.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind:
    UseFixturesWithoutParameters: ~
  location:
    row: 19
    column: 1
  end_location:
    row: 19
    column: 26
  fix:
    content: ""
    location:
      row: 19
      column: 0
    end_location:
      row: 19
      column: 26
  parent: ~
- kind:
    UseFixturesWithoutParameters: ~
  location:
    row: 24
    column: 1
  end_location:
    row: 24
    column: 24
  fix:
    content: ""
    location:
      row: 24
      column: 0
    end_location:
      row: 24
      column: 24
  parent: ~

